[BugFix] fix draw palette invisible on some screen

--- a/webServer/client/assets/scss/_workSpace.scss
+++ b/webServer/client/assets/scss/_workSpace.scss
@@ -62,9 +62,9 @@
  *      --ColorBlock * 8
  */
 .DrawingPalette {
-    position: fixed;
-    top: 640px;
-    left: 200px;
+    position: absolute;
+    top: -160px;
+    left: 0px;
     background: #fefefe;
     transition: 0.3s;
     border: 1px;
@@ -96,16 +96,5 @@
 
 .PaletteShow{
     opacity: 1;
-    top: 660px;
     visibility: visible;
-}
-
-.DrawingMarker{
-    position: fixed;
-    opacity: 0.1;
-    background-color: #000;
-    height: 20px;
-    width: 20px;
-    border-radius: 100%;
-    z-index: 2;
 }
